# symbolicator

./: .craft.yml  .dockerignore  .envrc  .flake8  .freight.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  LICENSE.md  Makefile  README.md  build.rs  cloudbuild.yaml  conftest.py  dangerfile.js  docker-entrypoint.sh  index.html  local.example.yml  mkdocs.yml  pyproject.toml  pytest.ini  rustfmt.toml  search.html  sitemap.xml  warden.toml  wrk_minidump.lua
crates/process-event/: Cargo.toml
crates/process-event/src/: main.rs
crates/symbolicator/: Cargo.toml  build.rs
crates/symbolicator-cache/: Cargo.toml  brainstorm.rs
crates/symbolicator-cache/src/: computation.rs  fscache.rs  lib.rs
crates/symbolicator-common/: Cargo.toml
crates/symbolicator-common/src/: lib.rs  logging.rs  metrics.rs
crates/symbolicator-crash/: Cargo.toml  build.rs
crates/symbolicator-crash/src/: lib.rs
crates/symbolicator-download/: Cargo.toml
crates/symbolicator-download/src/: config.rs  lib.rs  sentry.rs
crates/symbolicator-js/: Cargo.toml
crates/symbolicator-js/src/: api_lookup.rs  bundle_index.rs  bundle_index_cache.rs  bundle_lookup.rs  interface.rs  lib.rs  lookup.rs  metrics.rs  service.rs  sourcemap_cache.rs  symbolication.rs  utils.rs
crates/symbolicator-js/tests/integration/: main.rs  sourcemap.rs  utils.rs
crates/symbolicator-js/tests/integration/snapshots/: integration__sourcemap__bundle_index.snap  integration__sourcemap__e2e_multiple_smref_scraped.snap  integration__sourcemap__e2e_node_debugid.snap  integration__sourcemap__e2e_react_native.snap  integration__sourcemap__e2e_scraped_debugid.snap  (+15 more)
crates/symbolicator-native/: Cargo.toml
crates/symbolicator-native/src/: interface.rs  lib.rs  metrics.rs
crates/symbolicator-native/src/caches/: bitcode.rs  cficaches.rs  derived.rs  il2cpp.rs  mod.rs  ppdb_caches.rs  symcaches.rs
crates/symbolicator-native/src/symbolication/: apple.rs  attachments.rs  demangle.rs  dotnet.rs  minidump_stacktraces.rs  mod.rs  module_lookup.rs  native.rs  process_minidump.rs  source_context.rs  symbolicate.rs  variables.rs
crates/symbolicator-native/tests/integration/: e2e.rs  main.rs  process_apple.rs  process_minidump.rs  public_sources.rs  source_errors.rs  srcsrv.rs  symbolication.rs  utils.rs
crates/symbolicator-proguard/: Cargo.toml
crates/symbolicator-proguard/src/: .symbolication.rs.pending-snap  interface.rs  java.rs  lib.rs  metrics.rs  service.rs  source_context.rs  symbolication.rs
crates/symbolicator-proguard/src/res/: mapping-outline-complex.txt  mapping-synthesized-frames.txt
crates/symbolicator-proguard/tests/integration/: main.rs  proguard.rs  utils.rs
crates/symbolicator-raw/: Cargo.toml
crates/symbolicator-raw/src/: js.rs  lib.rs  processor.rs  raw_event.rs
crates/symbolicator-service/: Cargo.toml
crates/symbolicator-service/src/: cache.rs  config.rs  lib.rs  logging.rs  metrics.rs  services.rs  source_context.rs  test.rs  types.rs
crates/symbolicator-service/src/caches/: index.rs  mod.rs  sourcefiles.rs  versions.rs
crates/symbolicator-service/src/caching/: cache_error.rs  cache_key.rs  cleanup.rs  config.rs  fs.rs  memory.rs  metadata.rs  mod.rs  tests.rs
crates/symbolicator-service/src/download/: compression.rs  deny_list.rs  destination.rs  destiniation.rs  fetch_file.rs  filesystem.rs  gcs.rs  http.rs  index.rs  mod.rs  partial.rs  s3.rs  sentry.rs
crates/symbolicator-service/src/js/: metrics.rs
crates/symbolicator-service/src/objects/: cab_synth_cache.rs  candidates.rs  data_cache.rs  meta_cache.rs  mod.rs  raw_compressed_cache.rs
crates/symbolicator-service/src/services/: bitcode.rs  cache_key.rs  cacher.rs  cacher2.rs  cficaches.rs  derived.rs  fetch_file.rs  il2cpp.rs  minidump.rs  mod.rs  module_lookup.rs  ppdb_caches.rs  shared_cache.rs  sourcemap.rs  sourcemap_lookup.rs  symcaches.rs
crates/symbolicator-service/src/types/: mod.rs  objects.rs
crates/symbolicator-service/src/utils/: addr.rs  compression.rs  defer.rs  futures.rs  gcs.rs  hex.rs  http.rs  mod.rs  sentry.rs
crates/symbolicator-service/tests/integration/: e2e.rs  main.rs  process_minidump.rs  public_sources.rs  source_errors.rs  sourcemap.rs  symbolication.rs  utils.rs
crates/symbolicator-sources/: Cargo.toml
crates/symbolicator-sources/src/: filetype.rs  index.rs  lib.rs  paths.rs  remotefile.rs  sources.rs  types.rs
crates/symbolicator-sources/src/sources/: filesystem.rs  gcs.rs  http.rs  s3.rs  sentry.rs
crates/symbolicator-stress/: Cargo.toml
crates/symbolicator-stress/src/: logging.rs  main.rs  stresstest.rs  workloads.rs
crates/symbolicator-test/: Cargo.toml
crates/symbolicator-test/src/: lib.rs
crates/symbolicator/src/: cache.rs  cli.rs  config.rs  healthcheck.rs  logging.rs  macros.rs  main.rs  metrics.rs  server.rs  service.rs  sources.rs  test.rs
crates/symbolicator/src/endpoints/: applecrashreport.rs  attachments.rs  error.rs  healthcheck.rs  metrics.rs  minidump.rs  mod.rs  multipart.rs  proxy.rs  requests.rs  sourcemap.rs  symbolicate.rs  symbolicate_any.rs  symbolicate_js.rs  symbolicate_jvm.rs  symbolicate_v2.rs
crates/symbolicator/src/services/: bitcode.rs  cacher.rs  cficaches.rs  il2cpp.rs  minidump.rs  mod.rs  ppdb_caches.rs  shared_cache.rs  symbolication.rs  symcaches.rs  usym.rs
crates/symbolicator/src/types/: mod.rs  objects.rs
crates/symbolicator/src/utils/: futures.rs  gcs.rs  hex.rs  http.rs  mod.rs  multipart.rs  paths.rs  sentry.rs
crates/symbolicli/: Cargo.toml  README.md  symboliclirc.example
crates/symbolicli/src/: event.rs  js_local_source.rs  main.rs  oauth.rs  output.rs  response.rs  settings.rs
crates/symsorter/: Cargo.toml  README.md
crates/symsorter/src/: app.rs  config.rs  difs.rs  dyldcache.rs  main.rs  utils.rs
crates/wasm-split/: Cargo.toml  README.md
crates/wasm-split/src/: main.rs
symsorter/: Cargo.toml  README.md
symsorter/src/: app.rs  config.rs  difs.rs  main.rs  plist.rs  utils.rs
wasm-split/: Cargo.toml  README.md
wasm-split/src/: main.rs
(+532 files in other folders)
