[package]
name = "symsorter"
version = "0.3.2"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.2"
clap = "2.33.0"
anyhow = "1.0.32"
walkdir = "2.2.9"
symbolic = { version="7.5.0", features = ["debuginfo-serde"] }
console = "0.9.0"
zstd = "0.4.28"
itertools = "0.8.0"
zip = "0.5.3"
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
chrono = { version = "0.4.9", features = ["serde"] }
regex = "1.3.6"
lazy_static = "1.4.0"
