[package]
name = "symsorter"
version = "0.3.2"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.21"
clap = "2.33.3"
anyhow = "1.0.37"
walkdir = "2.3.1"
symbolic = { version="8.0.2", features = ["debuginfo-serde"] }
console = "0.14.0"
zstd = "0.6.0"
itertools = "0.10.0"
zip = "0.5.9"
parking_lot = "0.11.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.4.3"
lazy_static = "1.4.0"
