[package]
name = "symsorter"
version = "0.3.3"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
chrono = { version = "0.4.19", features = ["serde"] }
console = "0.14.0"
lazy_static = "1.4.0"
rayon = "1.5.0"
regex = "1.4.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"
symbolic = { version="8.0.2", features = ["debuginfo-serde"] }
walkdir = "2.3.1"
zip = "0.5.9"
zstd = "0.6.0"
