[package]
name = "wasm-split"
version = "0.3.3"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
wasmbin = "0.2.2"
uuid = { version = "0.8.1", features = ["v4"] }
anyhow = "1.0.34"
hex = "0.4.2"
