[workspace]

[package]
name = "wasm-split"
version = "0.3.3"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
argh = "0.1.4"
hex = "0.4.2"
uuid = { version = "0.8.2", features = ["v4"] }
wasmbin = "0.2.2"
