[package]
name = "process-event"
publish = false
version = "25.9.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true, features = [
    "blocking",
    "json",
    "multipart",
    "hickory-dns",
] }
serde = { workspace = true }
serde_json = { workspace = true }
symbolic = { workspace = true }
