[package]
name = "symbolicator-cache"
publish = false
version = "0.5.1"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"

[dependencies]
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros", "time"] }
