[package]
name = "symbolicator-crash"
authors = ["Sentry <oss@sentry.io>"]
description = "Native crash reporting for Symbolicator"
homepage = "https://getsentry.github.io/symbolicator/"
repository = "https://github.com/getsentry/symbolicator"
version = "25.9.0"
edition = "2024"
build = "build.rs"
license-file = "../LICENSE"
publish = false

[dependencies]

[build-dependencies]
bindgen = { workspace = true }
cmake = { workspace = true }
