[package]
name = "symbolicator-crash"
authors = ["Sentry <oss@sentry.io>"]
description = "Native crash reporting for Symbolicator"
homepage = "https://getsentry.github.io/symbolicator/"
repository = "https://github.com/getsentry/symbolicator"
version = "26.2.1"
edition = "2024"
build = "build.rs"
license-file = "../../LICENSE.md"
publish = false

[dependencies]

[build-dependencies]
bindgen = { workspace = true }
cmake = { workspace = true }
