[package]
name = "symbolicator-crash"
authors = ["Sentry <oss@sentry.io>"]
description = "Native crash reporting for Symbolicator"
homepage = "https://getsentry.github.io/symbolicator/"
repository = "https://github.com/getsentry/symbolicator"
version = "26.7.0"
edition = "2024"
license-file = "../../LICENSE.md"
publish = false

[dependencies]
minidumper-child = { workspace = true }
sentry = { workspace = true }
tracing = { workspace = true }
