[package]
name = "symbolicator-js"
publish = false
version = "24.11.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"

[dependencies]
data-url = "0.3.0"
futures = "0.3.12"
humantime = "2.1.0"
moka = { version = "0.12.8", features = ["future", "sync"] }
once_cell = "1.17.1"
regex = "1.5.5"
reqwest = { workspace = true, features = [
    "gzip",
    "brotli",
    "deflate",
    "json",
    "stream",
    "hickory-dns",
] }
sentry = { version = "0.34.0", features = ["tracing"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
sha2 = "0.10.6"
symbolic = { version = "12.12.0", features = ["common-serde", "sourcemapcache"] }
symbolicator-service = { path = "../symbolicator-service" }
symbolicator-sources = { path = "../symbolicator-sources" }
tempfile = "3.2.0"
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
tracing = "0.1.34"
url = { version = "2.2.0", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.18.0", features = ["redactions", "yaml"] }
symbolicator-test = { path = "../symbolicator-test" }
