[package]
name = "symbolicator-native"
publish = false
version = "25.6.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.57"
apple-crash-report-parser = "0.5.1"
async-trait = "0.1.53"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.12"
# Uses a forked rust-minidump version, which contains changes made in this PR:
# https://github.com/rust-minidump/rust-minidump/pull/1088.
minidump = { git = "https://github.com/getsentry/rust-minidump.git", rev = "837a5ae8" }
minidump-processor = { git = "https://github.com/getsentry/rust-minidump.git", rev = "837a5ae8" }
minidump-unwind = { git = "https://github.com/getsentry/rust-minidump.git", rev = "837a5ae8" }
moka = { version = "0.12.8", features = ["future", "sync"] }
once_cell = "1.18.0"
regex = "1.5.5"
sentry = { version = "0.41.0", default-features = false, features = [
    # default features, except `release-health` is disabled
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "transport",
    # additional features
    "tracing",
]}
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
symbolic = { workspace = true, features = [
    "cfi",
    "common-serde",
    "debuginfo",
    "demangle",
    "symcache",
    "il2cpp",
    "ppdb",
] }
symbolicator-service = { path = "../symbolicator-service" }
symbolicator-sources = { path = "../symbolicator-sources" }
tempfile = "3.2.0"
thiserror = "1.0.31"
tokio = { workspace = true }
tracing = "0.1.34"
url = { version = "2.2.0", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.18.0", features = ["redactions", "yaml"] }
symbolicator-test = { path = "../symbolicator-test" }
test-assembler = "0.1.5"
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
