[package]
name = "symbolicator-native"
publish = false
version = "25.10.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
apple-crash-report-parser = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
minidump = { workspace = true }
minidump-processor = { workspace = true }
minidump-unwind = { workspace = true }
moka = { workspace = true }
regex = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symbolic = { workspace = true, features = [
    "cfi",
    "common-serde",
    "debuginfo",
    "demangle",
    "symcache",
    "il2cpp",
    "ppdb",
] }
symbolicator-service = { workspace = true }
symbolicator-sources = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
symbolicator-test = { workspace = true }
test-assembler = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
