[package]
name = "symbolicator-proguard"
publish = false
version = "24.5.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"

[dependencies]
futures = { workspace = true }
proguard = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
symbolic = { workspace = true }
symbolicator-service = { workspace = true }
symbolicator-sources = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["redactions", "yaml"] }
symbolicator-test = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
