[package]
name = "symbolicator-proguard"
publish = false
version = "25.1.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"

[dependencies]
futures = "0.3.12"
proguard = "5.5.0"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
symbolic = { workspace = true }
symbolicator-service = { path = "../symbolicator-service" }
symbolicator-sources = { path = "../symbolicator-sources" }
tempfile = "3.10.0"
tracing = "0.1.34"

[dev-dependencies]
insta = { version = "1.18.0", features = ["redactions", "yaml"] }
symbolicator-test = { path = "../symbolicator-test" }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
