[package]
name = "symbolicator-proguard"
publish = false
version = "25.11.1"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2024"
license-file = "../../LICENSE.md"

[dependencies]
futures = { workspace = true }
proguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symbolic = { workspace = true }
symbolicator-service = { workspace = true }
symbolicator-sources = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
symbolicator-test = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
