[package]
name = "symbolicator-service"
version = "24.5.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"

[features]
https = []

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-credential-types = { workspace = true, features = ["hardcoded-credentials"] }
aws-sdk-s3 = { workspace = true }
cadence = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
crossbeam-utils = { workspace = true }
filetime = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
gcp_auth = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
idna = { workspace = true }
ipnetwork = { workspace = true }
jsonwebtoken = { workspace = true }
moka = { workspace = true, features = ["future", "sync"] }
once_cell = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "brotli", "deflate", "json", "stream", "hickory-dns"] }
rustc-hash = { workspace = true }
sentry = { workspace = true, features = ["tracing", "UNSTABLE_metrics"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
symbolic = { workspace = true, features = ["cfi", "common-serde", "debuginfo", "symcache"] }
symbolicator-sources = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
thread_local = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "time", "json"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
zip = { workspace = true, features = ["deflate"] }
zstd = { workspace = true }

[dev-dependencies]
sha-1 = { workspace = true }
symbolicator-test = { workspace = true }
