[package]
name = "symbolicator-service"
version = "25.1.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"

[features]
https = []

[dependencies]
anyhow = "1.0.57"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.0.1", features = [
    "hardcoded-credentials",
] }
aws-sdk-s3 = "1.4.0"
cadence = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam-utils = "0.8.19"
filetime = "0.2.16"
flate2 = "1.0.23"
futures = "0.3.12"
gcp_auth = "0.12.2"
humantime = "2.1.0"
humantime-serde = "1.1.1"
idna = "1.0.2"
ipnetwork = "0.20.0"
jsonwebtoken = "9.1.0"
moka = { version = "0.12.8", features = ["future", "sync"] }
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = { workspace = true, features = [
    "gzip",
    "brotli",
    "deflate",
    "json",
    "stream",
    "hickory-dns",
] }
rustc-hash = "2.0.0"
sentry = { version = "0.34.0", features = ["tracing"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
serde_yaml = "0.9.14"
sha2 = "0.10.6"
symbolic = { workspace = true, features = [
    "cfi",
    "common-serde",
    "debuginfo",
    "symcache",
] }
symbolicator-sources = { path = "../symbolicator-sources" }
tempfile = "3.2.0"
thiserror = "1.0.31"
thread_local = "1.1.7"
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
tokio-util = { workspace = true, features = ["io"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "time",
    "json",
] }
url = { version = "2.2.0", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
zip = { version = "2.1.1", default-features = false, features = ["deflate"] }
zstd = "0.13.0"

[dev-dependencies]
sha-1 = "0.10.0"
symbolicator-test = { path = "../symbolicator-test" }
