[package]
name = "symbolicator-service"
version = "25.12.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2024"
license-file = "../../LICENSE.md"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
bytes = { workspace = true }
cab = { workspace = true }
cadence = { workspace = true }
chrono = { workspace = true }
crossbeam-utils = { workspace = true }
filetime = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
gcp_auth = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
idna = { workspace = true }
ipnetwork = { workspace = true }
jsonwebtoken = { workspace = true }
moka = { workspace = true }
proguard = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = [
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "json",
    "stream",
    "hickory-dns",
    "socks",
] }
rustc-hash = { workspace = true }
sentry = { workspace = true, features = ["logs"] }
serde = { workspace = true }
serde-vars = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
symbolic = { workspace = true, features = [
    "cfi",
    "common-serde",
    "debuginfo",
    "symcache",
] }
symbolicator-sources = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
thread_local = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
url = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
sha-1 = { workspace = true }
symbolicator-test = { workspace = true }
insta = { workspace = true }
