[package]
name = "symbolicator-sources"
publish = false
version = "25.4.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.68"
aws-types = "1.0.1"
glob = "0.3.0"
serde = { version = "1.0.137", features = ["derive", "rc"] }
symbolic = { workspace = true }
tracing = "0.1.34"
url = { version = "2.2.0", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.18.0", features = ["redactions", "yaml", "json"] }
once_cell = "1.18.0"
serde_yaml = "0.9.14"
serde_json = "1.0.140"