[package]
name = "symbolicator-sources"
publish = false
version = "25.12.1"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2024"
license-file = "../../LICENSE.md"

[dependencies]
anyhow = { workspace = true }
aws-types = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
symbolic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
