[package]
name = "symbolicator-stress"
publish = false
version = "24.5.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
humantime = { workspace = true }
sentry = { workspace = true, features = ["anyhow", "debug-images", "tracing"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sketches-ddsketch = { workspace = true }
symbolicator-js = { workspace = true }
symbolicator-native = { workspace = true }
symbolicator-service = { workspace = true }
symbolicator-test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", features = ["unprefixed_malloc_on_supported_platforms"] }
